# QtDbusMasterSlave

./: CMakeLists.txt  dbus.pro  main.cpp  masterdbus.cpp  masterdbus.h  servicenameandproperty.h  slavedbus.cpp
MasterSlaveDBus/: CMakeLists.txt  masterdbus.cpp  masterdbus.h  masterslavedbus.pri  servicenameandproperty.h  slavedbus.cpp  slavedbus.h
